[gd_scene load_steps=14 format=4 uid="uid://b32bixtlgd6ow"]

[ext_resource type="TileSet" uid="uid://bd21yv5fgijh3" path="res://resources/tile_set.tres" id="1_ao6hp"]
[ext_resource type="Script" path="res://scripts/castle.gd" id="1_oysm3"]
[ext_resource type="Texture2D" uid="uid://bdyrjenkv55ap" path="res://assets/textures/sprites.png" id="2_8aqu4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_32ofa"]
size = Vector2(96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1sxr"]
atlas = ExtResource("2_8aqu4")
region = Rect2(195, 101, 24, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gjxa"]
atlas = ExtResource("2_8aqu4")
region = Rect2(128, 111, 8, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_konpm"]
atlas = ExtResource("2_8aqu4")
region = Rect2(128, 106, 8, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvkaf"]
atlas = ExtResource("2_8aqu4")
region = Rect2(128, 101, 8, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kjsx"]
atlas = ExtResource("2_8aqu4")
region = Rect2(128, 96, 8, 5)

[sub_resource type="SpriteFrames" id="SpriteFrames_d51qu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gjxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_konpm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvkaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kjsx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_e5pmb"]
atlas = ExtResource("2_8aqu4")
region = Rect2(65, 71, 6, 6)

[sub_resource type="Curve" id="Curve_mnepe"]
_data = [Vector2(0, 0.303791), 0.0, 2.06912, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_bnbqq"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.0933333, 0.194667, 0.509333, 0.813333, 1)
colors = PackedColorArray(1, 0, 0, 1, 0.920965, 0.540017, 3.85046e-07, 1, 0.152537, 0.0528364, 6.01634e-09, 1, 0.791401, 0.780539, 0.782701, 1, 0.877616, 0.877616, 0.877616, 1, 1, 1, 1, 0)

[node name="Castle" type="StaticBody2D"]
collision_layer = 65
collision_mask = 32
script = ExtResource("1_oysm3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -48)
shape = SubResource("RectangleShape2D_32ofa")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD9//7/AAAJAAYAAAD9////AAAJAAcAAAD+//7/AAAKAAYAAAD+////AAAKAAcAAAD///7/AAAKAAYAAAD/////AAAKAAcAAAAAAP7/AAAOAAQAAAAAAP//AAAKAAcAAAABAP7/AAAPAAQAAAABAP//AAAKAAcAAAACAP7/AAALAAYAAAACAP//AAALAAcAAAD9//3/AAAJAAYAAAD+//3/AAAKAAYAAAD///3/AAAKAAYAAAAAAP3/AAAOAAIAAAABAP3/AAAPAAIAAAACAP3/AAALAAYAAAD9//v/AAAJAAYAAAD+//v/AAAKAAYAAAD///v/AAAKAAYAAAAAAPv/AAAOAAQAAAABAPv/AAAPAAQAAAACAPv/AAALAAYAAAD9//z/AAAJAAYAAAD+//z/AAAKAAYAAAD///z/AAAKAAYAAAAAAPz/AAAKAAYAAAABAPz/AAAKAAYAAAACAPz/AAALAAYAAAD9//r/AAAJAAQAAAD+//r/AAAKAAQAAAD///r/AAAKAAQAAAAAAPr/AAAOAAIAAAABAPr/AAAPAAIAAAACAPr/AAALAAQAAAA=")
tile_set = ExtResource("1_ao6hp")
collision_enabled = false

[node name="TowerSprite2D" type="Sprite2D" parent="TileMapLayer"]
z_index = 50
z_as_relative = false
position = Vector2(-24, -60)
texture = SubResource("AtlasTexture_t1sxr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="TileMapLayer/TowerSprite2D"]
position = Vector2(3, -8)
sprite_frames = SubResource("SpriteFrames_d51qu")
autoplay = "default"

[node name="FireCPUParticles2D" type="CPUParticles2D" parent="TileMapLayer"]
unique_name_in_owner = true
z_index = 60
z_as_relative = false
position = Vector2(-13, -73)
amount = 6
texture = SubResource("AtlasTexture_e5pmb")
direction = Vector2(0, -1)
spread = 60.0
gravity = Vector2(0, -20)
initial_velocity_min = 20.0
initial_velocity_max = 25.0
damping_min = 13.744
damping_max = 13.744
scale_amount_min = 1.5
scale_amount_max = 3.0
scale_amount_curve = SubResource("Curve_mnepe")
color_ramp = SubResource("Gradient_bnbqq")

[node name="FireCPUParticles2D2" type="CPUParticles2D" parent="TileMapLayer"]
unique_name_in_owner = true
z_index = 60
z_as_relative = false
position = Vector2(24, -50)
amount = 6
texture = SubResource("AtlasTexture_e5pmb")
direction = Vector2(0, -1)
spread = 60.0
gravity = Vector2(0, -20)
initial_velocity_min = 20.0
initial_velocity_max = 25.0
damping_min = 13.744
damping_max = 13.744
scale_amount_min = 1.5
scale_amount_max = 3.0
scale_amount_curve = SubResource("Curve_mnepe")
color_ramp = SubResource("Gradient_bnbqq")

[node name="FireCPUParticles2D3" type="CPUParticles2D" parent="TileMapLayer"]
unique_name_in_owner = true
z_index = 60
z_as_relative = false
position = Vector2(-22, -6)
amount = 6
texture = SubResource("AtlasTexture_e5pmb")
direction = Vector2(0, -1)
spread = 60.0
gravity = Vector2(0, -20)
initial_velocity_min = 20.0
initial_velocity_max = 25.0
damping_min = 13.744
damping_max = 13.744
scale_amount_min = 1.5
scale_amount_max = 3.0
scale_amount_curve = SubResource("Curve_mnepe")
color_ramp = SubResource("Gradient_bnbqq")

[node name="ExplodeCPUParticles2D" type="CPUParticles2D" parent="TileMapLayer"]
unique_name_in_owner = true
z_index = 60
z_as_relative = false
position = Vector2(0, -48)
emitting = false
amount = 9
lifetime = 4.0
one_shot = true
explosiveness = 0.4
texture = SubResource("AtlasTexture_e5pmb")
direction = Vector2(0, -1)
spread = 136.3
gravity = Vector2(0, 500)
initial_velocity_min = 274.88
initial_velocity_max = 274.88
scale_amount_min = 0.7
scale_amount_max = 1.3
color = Color(0.470436, 0.45481, 0.3019, 1)
